приведение кода к относительно нормальному виду

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -15,6 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "useSSL": false,
+      "httpPort": 80,
       "dotnetRunMessages": true
     }
   }
